applications/xihe-test-v2/finetune/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: xihe-ingress
  namespace: xihe-test-v2
spec:
  rules:
  - host: xihe-finetune2.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: service-finetune
          servicePort: 80
        path: /
  tls:
  - hosts:
    - xihe-finetune2.test.osinfra.cn
    secretName: xihe-test-osinfra-cn-tls
